<resources>
    <string name="player_name_placeholder" translatable="false">"12345678901"</string>
    <string name="_000" translatable="false">-000</string>
    <string name="app_name">Mahjong Scoring MCR</string>
    <string name="close_drawer">Close menu</string>
    <string name="open_drawer">Open menu</string>
    <string name="old_games">Old games</string>
    <string name="combinations">Combinations</string>
    <string name="green_book_en">Green Book (English PDF)</string>
    <string name="press_again_to_exit">Press again to exit</string>
    <string name="there_arent_games_yet_start_one">There aren\'t games yet.\nStart one!</string>
    <string name="best_hand">Best hand</string>
    <string name="rounds">Rounds</string>
    <string name="delete">Delete</string>
    <string name="resume">Resume</string>
    <string name="delete_game">Delete game</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="search">Search</string>
    <string name="combination_name">Combination name</string>
    <string name="toggle_descriptions">Toggle descriptions</string>
    <string name="no_email_apps_founded">Could not find email apps</string>
    <string name="table">Table</string>
    <string name="game">Game</string>
    <string name="totals">Totals</string>
    <string name="number_symbol">#</string>
    <string name="final_results">Final results</string>
    <string name="cancel_penalties">Cancel penalties</string>
    <string name="draw">Draw</string>
    <string name="east">East</string>
    <string name="west">West</string>
    <string name="south">South</string>
    <string name="north">North</string>
    <string name="ups_something_wrong">Ups! Something went wrong.</string>
    <string name="list">List</string>
    <string name="close">Close</string>
    <string name="player_east_name">Player East name</string>
    <string name="player_south_name">Player South name</string>
    <string name="player_west_name">Player West name</string>
    <string name="player_north_name">Player North name</string>
    <string name="player_one">Player A</string>
    <string name="player_two">Player B</string>
    <string name="player_three">Player C</string>
    <string name="player_four">Player D</string>
    <string name="divided">Divided</string>
    <string name="edit_names">Edit names</string>
    <string name="save">Save</string>
    <string name="penalty">Penalty</string>
    <string name="zero">0</string>
    <string name="nine">9</string>
    <string name="eight">8</string>
    <string name="seven">7</string>
    <string name="six">6</string>
    <string name="five">5</string>
    <string name="four">4</string>
    <string name="three">3</string>
    <string name="two">2</string>
    <string name="one">1</string>
    <string name="end">End</string>
    <string name="mahjong">Mahjong</string>
    <string name="backspace">Backspace</string>
    <string name="ok">OK</string>
    <string name="discarder_">Discarder?</string>
    <string name="pts">Pts</string>
    <string name="delete_round">Delete round</string>
    <string name="first">First</string>
    <string name="second">Second</string>
    <string name="rotate_seats">Rotate seats</string>
    <string name="pure_double_chow">Pure double chow</string>
    <string name="mixed_double_chow">Mixed double chow</string>
    <string name="short_straight">Short straight</string>
    <string name="two_terminal_chows">Two terminal chows</string>
    <string name="pung_of_terminals_or_honors">Pung of terminals or honors</string>
    <string name="melded_kong">Melded Kong</string>
    <string name="one_voided_suit">One voided suit</string>
    <string name="no_honors">No honors</string>
    <string name="edge_wait">Edge wait</string>
    <string name="closed_wait">Closed wait</string>
    <string name="single_waiting">Single waiting</string>
    <string name="self_drawn">Self-drawn</string>
    <string name="flower_tiles">Flowers or seasons</string>
    <string name="dragon_pung">Dragon pung</string>
    <string name="prevalent_wind">Prevalent wind</string>
    <string name="seat_wind">Seat wind</string>
    <string name="concealed_hand">Concealed hand</string>
    <string name="all_chows">All chows</string>
    <string name="tile_hog">Tile hog</string>
    <string name="double_pungs">Double pungs</string>
    <string name="two_concealed_pungs">Two concealed pungs</string>
    <string name="concealed_kong">Concealed Kong</string>
    <string name="all_simples">All simples</string>
    <string name="outside_hand">Outside hand</string>
    <string name="fully_concealed_hand">Fully concealed hand</string>
    <string name="two_melded_kongs">Two melded Kongs</string>
    <string name="last_tile">Last tile</string>
    <string name="all_pungs">All pungs</string>
    <string name="half_flush">Half flush</string>
    <string name="mixed_shifted_chows">Mixed shifted chows</string>
    <string name="all_types">All types</string>
    <string name="melded_hand">Melded hand</string>
    <string name="two_dragon_pungs">Two dragon pungs</string>
    <string name="mixed_straight">Mixed straight</string>
    <string name="reversible_tiles">Reversible tiles</string>
    <string name="mixed_triple_chow">Mixed triple chow</string>
    <string name="mixed_shifted_pungs">Mixed shifted pungs</string>
    <string name="chicken_hand">Chicken hand</string>
    <string name="last_tile_draw">Last tile draw</string>
    <string name="last_tile_claim">Last tile claim</string>
    <string name="out_with_replacement_tile">Out with replacement tile</string>
    <string name="robbing_the_kong">Robbing the Kong</string>
    <string name="two_concealed_kongs">Two concealed Kongs</string>
    <string name="lesser_honors_and_knitted_tiles">Lesser honors and knitted tiles</string>
    <string name="knitted_straight">Knitted straight</string>
    <string name="upper_four">Upper four</string>
    <string name="lower_four">Lower four</string>
    <string name="big_three_winds">Big three winds</string>
    <string name="pure_straight">Pure straight</string>
    <string name="three_suited_terminal_chows">Three-suited terminal chows</string>
    <string name="pure_shifted_chows">Pure shifted chows</string>
    <string name="all_fives">All fives</string>
    <string name="triple_pungs">Triple pungs</string>
    <string name="three_concealed_pungs">Three concealed pungs</string>
    <string name="seven_pairs">Seven pairs</string>
    <string name="greater_honors_and_knitted_tiles">Greater honors and knitted tiles</string>
    <string name="all_even_pungs">All even pungs</string>
    <string name="full_flush">Full flush</string>
    <string name="pure_triple_chow">Pure triple chow</string>
    <string name="pure_shifted_pungs">Pure shifted pungs</string>
    <string name="upper_tiles">Upper tiles</string>
    <string name="medium_tiles">Medium tiles</string>
    <string name="lower_tiles">Lower tiles</string>
    <string name="four_pure_shifted_chows">Four pure shifted chows</string>
    <string name="three_kongs">Three Kongs</string>
    <string name="all_terminals_and_honors">All terminals and honors</string>
    <string name="quadruple_chow">Quadruple chow</string>
    <string name="four_pure_shifted_pungs">Four pure shifted pungs</string>
    <string name="all_terminals">All terminals</string>
    <string name="all_honors">All honors</string>
    <string name="little_four_winds">Little four winds</string>
    <string name="little_three_dragons">Little three dragons</string>
    <string name="four_concealed_pungs">Four concealed pungs</string>
    <string name="pure_terminal_chows">Pure terminal chows</string>
    <string name="big_three_dragons">Big three dragons</string>
    <string name="thirteen_orphans">Thirteen orphans</string>
    <string name="big_four_winds">Big four winds</string>
    <string name="all_green">All green</string>
    <string name="nine_gates">Nine gates</string>
    <string name="four_kongs">Four Kongs</string>
    <string name="seven_shifted_pairs">Seven shifted pairs</string>
    <string name="description_edge_wait">Win with 3 or 7 having 1–2 or 8–9</string>
    <string name="description_closed_wait">Win with central chow tile</string>
    <string name="description_single_waiting">Win with pair tile</string>
    <string name="description_self_drawn">Win with a tile from the wall</string>
    <string name="description_concealed_hand">Having all from the wall except last tile</string>
    <string name="description_fully_concealed_hand">All from the wall</string>
    <string name="description_last_tile">Win with tile exposed or discarded three times</string>
    <string name="description_melded_hand">All with melded tiles</string>
    <string name="description_last_tile_draw">Win with last wall tile</string>
    <string name="description_last_tile_claim">Win with last discard tile</string>
    <string name="description_out_with_replacement_tile">Win with Kong extra tile</string>
    <string name="description_robbing_the_kong">Win with other player Kong extension tile</string>
    <string name="throw_dice">Throw dice</string>
    <string name="start_new_game">Start a new game</string>
    <string name="self_abr">S</string>
    <string name="direct_abr">D</string>
    <string name="indirect_abr">I</string>
    <string name="_1st">1st</string>
    <string name="_2nd">2nd</string>
    <string name="_3rd">3rd</string>
    <string name="mahjong_madrid_web">Mahjong Madrid (web)</string>
    <string name="ema_web">EMA (web)</string>
    <string name="winner_">Winner:</string>
    <string name="points_">Points:</string>
    <string name="self_pick">Self pick</string>
    <string name="direct">Direct</string>
    <string name="indirect">Indirect</string>
    <string name="to_be_by">To be \\ By</string>
    <string name="points_needed">Points needed:</string>
    <string name="disable_diffs_calcs">Disable diffs calcs</string>
    <string name="enable_diffs_calcs">Enable diffs calcs</string>
    <string name="green_book_es">Green Book (Spanish PDF)</string>
    <string name="diffsCalculator">Diffs Calculator</string>
    <string name="diff">Needed points</string>
    <string name="i_think_is_enough_jajaja">I think this is enough, isn\'t it? 🤣</string>
    <string name="send_email">Send Email</string>
    <string name="export_games">Export games</string>
    <string name="share_files_using">Share files using:</string>
    <string name="double_quotes_warn">⚠️ Double quotes are not allowed (will be erased on save)</string>
    <string name="game_name">Game name</string>
    <string name="share">Share</string>
    <string name="share_game">Share game</string>
    <string name="share_game_using">Share game using:</string>
    <string name="_4th">4th</string>
    <string name="start">Start</string>
    <string name="plain_text">Plain text (only final results)</string>
    <string name="table_csv">CSV table (all game data)</string>
    <string name="contact_mahjong_madrid">Contact Mahjong Madrid</string>
    <string name="contact_app_support">Contact app support</string>
    <string name="import_games">Import games</string>
    <string name="importable">Importable (all game data)</string>
    <string name="language">Language</string>
    <string name="choose_language">Choose language:</string>
    <string name="chinese">🇨🇳Chinese</string>
    <string name="dutch">🇳🇱Dutch</string>
    <string name="english">🇬🇧English (default)</string>
    <string name="french">🇫🇷French</string>
    <string name="spanish">🇪🇸Spanish</string>
    <string name="there_arent_combinations_try_new_search">There are no combinations under this criterion, try a different one.</string>
    <string name="error">Error</string>
    <string name="italian">🇮🇹Italian</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>