<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright © 2023  Ernesto Vega de la Iglesia Soria
  ~
  ~     This program is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_current_game"
            android:icon="@drawable/ic_play_arrow_white_24px"
            android:iconTint="@color/black"
            android:visible="false"
            tools:targetApi="o" />

        <item
            android:id="@+id/nav_old_games"
            android:icon="@drawable/ic_history_black_24px"
            android:title="@string/old_games"
            android:visible="true" />

        <item
            android:id="@+id/nav_combinations"
            android:icon="@drawable/ic_format_list_numbered_black_24dp"
            android:title="@string/combinations" />

        <item
            android:id="@+id/nav_diffs_calculator"
            android:icon="@drawable/ic_calc"
            android:title="@string/diffsCalculator" />

        <item
            android:id="@+id/nav_greenbook_en"
            android:icon="@drawable/ic_import_contacts_black_24px"
            android:title="@string/green_book_en" />

        <item
            android:id="@+id/nav_greenbook_es"
            android:icon="@drawable/ic_import_contacts_black_24px"
            android:title="@string/green_book_es" />

        <item
            android:id="@+id/nav_mm_web"
            android:icon="@drawable/mm_logo_256"
            android:title="@string/mahjong_madrid_web" />

        <item
            android:id="@+id/nav_ema_web"
            android:icon="@drawable/ema_logo"
            android:title="@string/ema_web" />

        <item
            android:id="@+id/nav_contact_mahjong_madrid"
            android:icon="@drawable/ic_email_black_18px"
            android:title="@string/contact_mahjong_madrid" />

        <item
            android:id="@+id/nav_contact_app_support"
            android:icon="@drawable/ic_support"
            android:title="@string/contact_app_support" />

    </group>

</menu>
