<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright © 2024  Ernesto Vega de la Iglesia Soria
  ~
  ~     This program is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/action_change_language"
        android:title="@string/language"
        android:visible="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_enable_diffs_calcs"
        android:title="@string/enable_diffs_calcs"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_disable_diffs_calcs"
        android:title="@string/disable_diffs_calcs"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_export_games"
        android:title="@string/export_games"
        android:tooltipText="@string/export_games"
        app:showAsAction="never"
        tools:targetApi="o" />

    <item
        android:id="@+id/action_import_games"
        android:title="@string/import_games"
        android:tooltipText="@string/import_games"
        app:showAsAction="never"
        tools:targetApi="o" />

</menu>