<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:id="@+id/tlNumPadContainer"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:padding="@dimen/standard_margin">

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/standard_margin">

        <View
            android:layout_width="1dp"
            android:layout_height="1dp" />

        <TextView
            android:id="@+id/tvCustomNumPadDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/points"
            android:maxLength="4"
            android:maxLines="1"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent"
            android:alpha=".3"
            android:textSize="48sp"
            android:textStyle="bold" />

        <View
            android:layout_width="1dp"
            android:layout_height="1dp" />

    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/btCustomNumPad1"
            style="@style/buttonNumPad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/one" />

        <Button
            android:id="@+id/btCustomNumPad2"
            style="@style/buttonNumPad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/two" />

        <Button
            android:id="@+id/btCustomNumPad3"
            style="@style/buttonNumPad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/three" />

    </TableRow>


    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/half_standard_margin"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/btCustomNumPad4"
            style="@style/buttonNumPad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/four" />

        <Button
            android:id="@+id/btCustomNumPad5"
            style="@style/buttonNumPad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/five" />

        <Button
            android:id="@+id/btCustomNumPad6"
            style="@style/buttonNumPad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/six" />

    </TableRow>


    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/half_standard_margin"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/btCustomNumPad7"
            style="@style/buttonNumPad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seven" />

        <Button
            android:id="@+id/btCustomNumPad8"
            style="@style/buttonNumPad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eight" />

        <Button
            android:id="@+id/btCustomNumPad9"
            style="@style/buttonNumPad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nine" />

    </TableRow>


    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/half_standard_margin"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/btCustomNumPadDelete"
            style="@style/buttonNumPad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/x"
            android:textStyle="normal" />

        <Button
            android:id="@+id/btCustomNumPad0"
            style="@style/buttonNumPad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero" />

        <Button
            android:id="@+id/btCustomNumPadBackspace"
            style="@style/buttonNumPad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:textStyle="normal" />

    </TableRow>

</TableLayout>