<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright © 2024  Ernesto Vega de la Iglesia Soria
  ~
  ~     This program is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical"
    tools:context=".app.screens.diffs_calculator.DiffsCalculatorFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarDiffsCalculator"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:elevation="@dimen/toolbar_elevation"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:title="@string/diffsCalculator"
            tools:ignore="UnusedAttribute" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/llDiffsCalculatorTitles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical">

        <TextView
            style="@style/diffsCalculatorCell"
            android:lines="2"
            android:text="@string/diff"
            android:textColor="@color/grayLight" />

        <TextView
            style="@style/diffsCalculatorCell"
            android:text="@string/self_pick"
            android:textColor="@color/grayLight" />

        <TextView
            style="@style/diffsCalculatorCell"
            android:text="@string/direct"
            android:textColor="@color/grayLight" />

        <TextView
            style="@style/diffsCalculatorCell"
            android:text="@string/indirect"
            android:textColor="@color/grayLight" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewDiffsCalculator"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray"
        android:fadeScrollbars="false"
        android:fadingEdgeLength="@dimen/standard_margin"
        android:requiresFadingEdge="vertical"
        android:scrollbars="vertical"
        android:scrollIndicators="end"
        tools:listitem="@layout/diffs_calculator_item"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

</LinearLayout>
